@@ -7771,6 +7771,196 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testTooManyExpansions
+specifier|public
+name|void
+name|testTooManyExpansions
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|Analyzer
+name|a
+init|=
+operator|new
+name|Analyzer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|TokenStreamComponents
+name|createComponents
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|,
+name|Reader
+name|reader
+parameter_list|)
+block|{
+name|Tokenizer
+name|tokenizer
+init|=
+operator|new
+name|MockTokenizer
+argument_list|(
+name|reader
+argument_list|,
+name|MockTokenizer
+operator|.
+name|SIMPLE
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+return|return
+operator|new
+name|TokenStreamComponents
+argument_list|(
+name|tokenizer
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|public
+name|TokenStream
+name|getTokenStream
+parameter_list|()
+block|{
+name|Token
+name|a
+init|=
+operator|new
+name|Token
+argument_list|(
+literal|"a"
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|a
+operator|.
+name|setPositionIncrement
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|Token
+name|b
+init|=
+operator|new
+name|Token
+argument_list|(
+literal|"b"
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|b
+operator|.
+name|setPositionIncrement
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+return|return
+operator|new
+name|CannedTokenStream
+argument_list|(
+operator|new
+name|Token
+index|[]
+block|{
+name|a
+block|,
+name|b
+block|}
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|protected
+name|void
+name|setReader
+parameter_list|(
+specifier|final
+name|Reader
+name|reader
+parameter_list|)
+throws|throws
+name|IOException
+block|{             }
+block|}
+return|;
+block|}
+block|}
+decl_stmt|;
+name|AnalyzingSuggester
+name|suggester
+init|=
+operator|new
+name|AnalyzingSuggester
+argument_list|(
+name|a
+argument_list|,
+name|a
+argument_list|,
+literal|0
+argument_list|,
+literal|256
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|suggester
+operator|.
+name|build
+argument_list|(
+operator|new
+name|TermFreqArrayIterator
+argument_list|(
+operator|new
+name|TermFreq
+index|[]
+block|{
+operator|new
+name|TermFreq
+argument_list|(
+literal|"a"
+argument_list|,
+literal|1
+argument_list|)
+block|}
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"[a/1]"
+argument_list|,
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+literal|"a"
+argument_list|,
+literal|false
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
